<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"/>
        <RadioGroup
            android:id="@+id/radio_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_question1_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/few"/>
            <RadioButton
                android:id="@+id/radio_question1_answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/little"/>
            <RadioButton
                android:id="@+id/radio_question1_answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some"/>
            </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"/>

        <RadioGroup
            android:id="@+id/radio_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_question2_answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing"/>
            <RadioButton
                android:id="@+id/radio_question2_answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the"/>
            <RadioButton
                android:id="@+id/radio_question2_answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"/>

        <CheckBox
            android:id="@+id/checkbox_question3_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"/>
        <CheckBox
            android:id="@+id/checkbox_question3_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referring_text"/>
        <CheckBox
            android:id="@+id/checkbox_question3_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overall_context"/>
        <CheckBox
            android:id="@+id/checkbox_question3_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_spelling"/>

        <TextView
            android:id="@+id/question4_part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_part1"/>
        <TextView
            android:id="@+id/question4_part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_part2"/>
        <TextView
            android:id="@+id/question4_part3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_part3"/>

        <TextView
            android:id="@+id/question4_part4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"/>

        <EditText
            android:id="@+id/free_answer_question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submitAnswer"/>

<!--        <TextView
            android:id="@+id/results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>-->


    </LinearLayout>


</ScrollView>
