<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_text_padding"
    tools:context=".ReadingActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_of_english"
        android:textSize="@dimen/title_sizeH1"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions1"
        android:textSize="@dimen/title_sizeH2"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/default_padding"
        android:text="@string/question1"
        android:textSize="@dimen/general_text_size" />

    <RadioGroup
        android:id="@+id/radio_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <RadioButton
            android:id="@+id/radio_question1_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@string/few"
            android:textSize="@dimen/general_text_size" />

        <RadioButton
            android:id="@+id/radio_question1_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@string/little"
            android:textSize="@dimen/general_text_size" />

        <RadioButton
            android:id="@+id/radio_question1_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding"
            android:text="@string/some"
            android:textSize="@dimen/general_text_size" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_margin="@dimen/default_padding"
        android:background="@color/colorPrimaryDark" />

</LinearLayout>